--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,13 +46,34 @@ a {
 	position:absolute;
 	top:0; left:0;
 }
-	#userInfo p {
-		padding:15px;
-		border:1px solid #CCC;
-		background:rgba(80,120,255,0.05);
-	}
+#userInfo p {
+	padding:15px;
+	border:1px solid #CCC;
+	background:rgba(80,120,255,0.05);
+}
+#addUser{
 
+	width:100%;
+    height:100%;
+    display:none;
+    position:fixed;
+    top:0px;
+    left:0px;
+    background:rgba(0,0,0,0.1);
+
+	
+}
 fieldset {
-	border:0;
-	padding:0; margin:0;
+
+	max-width: 700px;
+	width: 60%;
+	padding: 50px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(50%, 50%);
+	transform: translate(-50%, -50%);
+	box-shadow: 0px 3px 6px rgba(0,0,0,1);
+	border-radius: 10px;
+	background: #fff;
 }
