--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,7 +10,27 @@ h2 {
 a {
   color: #00B7FF;
 }
+input{
+	display: block;
+	padding: 10%;
+    display: block;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    width: 100%;
+}
 
+button{
+	display: inline-grid;
+    padding: 5%;
+    width: 100%;
+    border-radius: 7px;
+    background: #0e3c5f;
+    color: #fff;
+    margin-top: 10%;
+	margin-left: 7%;
+	max-width: fit-content;
+
+}
 #wrapper {
 	padding-left:312px;
 	position:relative;
@@ -65,15 +85,16 @@ a {
 }
 fieldset {
 
-	max-width: 700px;
-	width: 60%;
-	padding: 50px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(50%, 50%);
-	transform: translate(-50%, -50%);
-	box-shadow: 0px 3px 6px rgba(0,0,0,1);
-	border-radius: 10px;
-	background: #fff;
+	max-width: fit-content;
+    width: 100%;
+    padding: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(50%, 50%);
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 3px 6px rgba(0,0,0,1);
+    border-radius: 10px;
+    background: #fff;
+	padding-right: 7%;
 }
